// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons can jump to the link editor using the keyboard shortcut 1`] = `
"<!-- wp:buttons -->
<div class=\\"wp-block-buttons\\"><!-- wp:button -->
<a class=\\"wp-block-button\\" href=\\"https://www.wordpress.org/\\">WordPress</a>
<!-- /wp:button --></div>
<!-- /wp:buttons -->"
`;

exports[`Buttons dismisses link editor when escape is pressed 1`] = `
"<!-- wp:buttons -->
<div class=\\"wp-block-buttons\\"><!-- wp:button -->
<a class=\\"wp-block-button\\">WordPress</a>
<!-- /wp:button --></div>
<!-- /wp:buttons -->"
`;

exports[`Buttons has focus on button content 1`] = `
"<!-- wp:buttons -->
<div class=\\"wp-block-buttons\\"><!-- wp:button -->
<a class=\\"wp-block-button\\">Content</a>
<!-- /wp:button --></div>
<!-- /wp:buttons -->"
`;
